<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivRestaurant"
        android:layout_width="259dp"
        android:layout_height="168dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/_60_f_275700347_09reccwb7jbxtkiyqxsyri4rimkahbj8" />

    <ImageView
        android:id="@+id/ivCazuela"
        android:layout_width="136dp"
        android:layout_height="153dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="372dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cazuela_chilena" />

    <ImageView
        android:id="@+id/ivPastel"
        android:layout_width="133dp"
        android:layout_height="149dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivRestaurant"
        app:srcCompat="@drawable/pastel_de_choclo_chilean_corn_and_meat_pie" />

    <TextView
        android:id="@+id/tvPastel"
        android:layout_width="141dp"
        android:layout_height="28dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/pastel"
        android:textSize="16sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintStart_toEndOf="@+id/ivPastel"
        app:layout_constraintTop_toBottomOf="@+id/ivRestaurant" />

    <TextView
        android:id="@+id/tvCazuela"
        android:layout_width="141dp"
        android:layout_height="24dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="172dp"
        android:text="@string/cazuela"
        android:textSize="16sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintStart_toEndOf="@+id/ivCazuela"
        app:layout_constraintTop_toBottomOf="@+id/ivRestaurant" />

    <EditText
        android:id="@+id/etCantidadPastel"
        android:layout_width="64dp"
        android:layout_height="50dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/cantidad_de_pasteles_de_choclo"
        android:inputType="number"
        android:textColorHint="#8D6E63"
        app:layout_constraintStart_toEndOf="@+id/ivPastel"
        app:layout_constraintTop_toBottomOf="@+id/tvPastel" />

    <EditText
        android:id="@+id/etCantidadCazuelas"
        android:layout_width="64dp"
        android:layout_height="50dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/cantidad_de_cazuelas"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/ivCazuela"
        app:layout_constraintTop_toBottomOf="@+id/tvCazuela" />

    <TextView
        android:id="@+id/tvCantidadPastel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="2dp"
        android:text="@string/cant"
        app:layout_constraintEnd_toStartOf="@+id/etCantidadPastel"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toEndOf="@+id/ivPastel"
        app:layout_constraintTop_toBottomOf="@+id/tvPastel" />

    <TextView
        android:id="@+id/tvCantidadCazuela"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="2dp"
        android:text="@string/cant"
        app:layout_constraintEnd_toStartOf="@+id/etCantidadCazuelas"
        app:layout_constraintStart_toEndOf="@+id/ivCazuela"
        app:layout_constraintTop_toBottomOf="@+id/tvCazuela" />

    <TextView
        android:id="@+id/tvPrecioPastel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="88dp"
        android:text="@string/valorPastel"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/ivPastel"
        app:layout_constraintTop_toBottomOf="@+id/tvPastel" />

    <TextView
        android:id="@+id/tvPrecioCazuela"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="88dp"
        android:text="@string/valorCazuela"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/ivCazuela"
        app:layout_constraintTop_toBottomOf="@+id/tvCazuela" />

    <TextView
        android:id="@+id/tvComida"
        android:layout_width="61dp"
        android:layout_height="27dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="560dp"
        android:text="@string/comida"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/total"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tvPropina"
        app:layout_constraintTop_toBottomOf="@+id/tvPropina" />

    <TextView
        android:id="@+id/tvPropina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/propina"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tvComida"
        app:layout_constraintTop_toBottomOf="@+id/tvComida" />


    <TextView
        android:id="@+id/tvValorComida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:text=""
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/tvComida"
        app:layout_constraintTop_toTopOf="@+id/tvComida" />

    <TextView
        android:id="@+id/tvValorPropina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:text=""
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/tvPropina"
        app:layout_constraintTop_toBottomOf="@+id/tvValorComida" />

    <TextView
        android:id="@+id/tvValorTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text=""
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/tvTotal"
        app:layout_constraintTop_toTopOf="@+id/tvTotal" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/sPropina"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvPropina"
        app:layout_constraintTop_toBottomOf="@+id/tvComida"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>